[tool.poetry]
name = "tg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytelegrambotapi = "^3.7.3"
yandexcloud = "^0.64.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
flake8-bugbear = "^20.1.4"
flake8-variables-names = "^0.0.3"
flake8-builtins = "^1.5.3"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
