[tool.poetry]
name = "yc-bot-tg"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
pytelegrambotapi = "^4.3.0"
yandexcloud = "^0.125.0"
typing-extensions = "^4.0.1"
emoji = "^1.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.11.29"
flake8-variables-names = "^0.0.4"
flake8-builtins = "^1.5.3"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 3

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
